// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactSuggestion component should display contact suggestion for a contact 1`] = `
<ContactSuggestion
  contactOrGroup={
    Object {
      "_id": "f3a4e501-abbd",
      "_type": "io.cozy.contacts",
      "cozy": Array [
        Object {
          "primary": true,
          "url": "https://jonsnow.mycozy.cloud",
        },
      ],
      "email": Array [
        Object {
          "address": "jon.snow@email.com",
          "type": "primary",
        },
      ],
      "fullname": "Jon Snow",
      "name": Object {
        "familyName": "Snow",
        "givenName": "Jon",
      },
    }
  }
  contacts={
    Array [
      Object {
        "_id": "f3a4e501-abbd",
        "_type": "io.cozy.contacts",
        "cozy": Array [
          Object {
            "primary": true,
            "url": "https://jonsnow.mycozy.cloud",
          },
        ],
        "email": Array [
          Object {
            "address": "jon.snow@email.com",
            "type": "primary",
          },
        ],
        "fullname": "Jon Snow",
        "name": Object {
          "familyName": "Snow",
          "givenName": "Jon",
        },
      },
    ]
  }
  t={[MockFunction]}
>
  <div
    className="recipient"
  >
    <Avatar
      className=""
      disabled={false}
      icon={[Function]}
      image=""
      size="small"
      style={Object {}}
      text="JS"
    >
      <div
        className="styles__c-avatar___PpDI- styles__c-avatar--text___2dvna"
        style={
          Object {
            "--circleSize": "32px",
            "backgroundColor": "#C2ADF4",
          }
        }
      >
        <span
          className="styles__c-avatar-initials___310qC"
        >
          JS
        </span>
      </div>
    </Avatar>
    <Identity
      details="https://jonsnow.mycozy.cloud"
      name="Jon Snow"
    >
      <div
        className="recipient-idents u-ml-1"
      >
        <div
          className="recipient-user"
        >
          Jon Snow
        </div>
        <div
          className="recipient-details"
        >
          https://jonsnow.mycozy.cloud
        </div>
      </div>
    </Identity>
  </div>
</ContactSuggestion>
`;

exports[`ContactSuggestion component should display contact suggestion for a contact without fullname (for example created by a share modal) 1`] = `
<ContactSuggestion
  contactOrGroup={
    Object {
      "_id": "f3a4e501-abbd",
      "_type": "io.cozy.contacts",
      "cozy": Array [],
      "email": Array [
        Object {
          "address": "jon.snow@email.com",
          "type": "primary",
        },
      ],
      "name": undefined,
    }
  }
  contacts={
    Array [
      Object {
        "_id": "f3a4e501-abbd",
        "_type": "io.cozy.contacts",
        "cozy": Array [],
        "email": Array [
          Object {
            "address": "jon.snow@email.com",
            "type": "primary",
          },
        ],
        "name": undefined,
      },
    ]
  }
  t={[MockFunction]}
>
  <div
    className="recipient"
  >
    <Avatar
      className=""
      disabled={false}
      icon={[Function]}
      image=""
      size="small"
      style={Object {}}
      text="J"
    >
      <div
        className="styles__c-avatar___PpDI- styles__c-avatar--text___2dvna"
        style={
          Object {
            "--circleSize": "32px",
            "backgroundColor": "#0DCBCF",
          }
        }
      >
        <span
          className="styles__c-avatar-initials___310qC"
        >
          J
        </span>
      </div>
    </Avatar>
    <Identity
      details="-"
      name="jon.snow@email.com"
    >
      <div
        className="recipient-idents u-ml-1"
      >
        <div
          className="recipient-user"
        >
          jon.snow@email.com
        </div>
        <div
          className="recipient-details"
        >
          -
        </div>
      </div>
    </Identity>
  </div>
</ContactSuggestion>
`;

exports[`ContactSuggestion component should display contact suggestion for a group 1`] = `
<ContactSuggestion
  contactOrGroup={
    Object {
      "_id": "610718e6-2d7a",
      "_type": "io.cozy.contacts.groups",
      "name": "The Night's Watch",
    }
  }
  contacts={
    Array [
      Object {
        "_id": "f3a4e501-abbd",
        "_type": "io.cozy.contacts",
        "email": Array [
          Object {
            "address": "jon.snow@email.com",
            "type": "primary",
          },
        ],
        "fullname": "Jon Snow",
        "name": Object {
          "familyName": "Snow",
          "givenName": "Jon",
        },
        "relationships": Object {
          "groups": Object {
            "data": Array [
              Object {
                "_id": "610718e6-2d7a",
                "_type": "io.cozy.contacts.groups",
              },
            ],
          },
        },
      },
      Object {
        "_id": "42dc490a-7878",
        "_type": "io.cozy.contacts",
        "email": Array [
          Object {
            "address": "cersei@email.com",
            "type": "primary",
          },
        ],
        "fullname": "Cersei Lannister",
        "name": Object {
          "familyName": "Lannister",
          "givenName": "Cersei",
        },
        "relationships": Object {
          "groups": Object {
            "data": Array [],
          },
        },
      },
      Object {
        "_id": "b5bed853-93da",
        "_type": "io.cozy.contacts",
        "email": Array [
          Object {
            "address": "samwell@email.com",
            "type": "primary",
          },
        ],
        "fullname": "Samwell Tarly",
        "name": Object {
          "familyName": "Tarly",
          "givenName": "Samwell",
        },
        "relationships": Object {
          "groups": Object {
            "data": Array [
              Object {
                "_id": "610718e6-2d7a",
                "_type": "io.cozy.contacts.groups",
              },
            ],
          },
        },
      },
    ]
  }
  t={[MockFunction]}
>
  <div
    className="recipient"
  >
    <Avatar
      className=""
      disabled={false}
      icon={[Function]}
      image=""
      size="small"
      style={Object {}}
      text="G"
    >
      <div
        className="styles__c-avatar___PpDI- styles__c-avatar--text___2dvna"
        style={
          Object {
            "--circleSize": "32px",
            "backgroundColor": "#7F6BEE",
          }
        }
      >
        <span
          className="styles__c-avatar-initials___310qC"
        >
          G
        </span>
      </div>
    </Avatar>
    <Identity
      details="2 members"
      name="The Night's Watch"
    >
      <div
        className="recipient-idents u-ml-1"
      >
        <div
          className="recipient-user"
        >
          The Night's Watch
        </div>
        <div
          className="recipient-details"
        >
          2 members
        </div>
      </div>
    </Identity>
  </div>
</ContactSuggestion>
`;
